[FIX] Nav spacing, img size

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -32,6 +32,10 @@ html {
 	}
 }
 
+.nav-divider {
+	margin: 0px 0.2rem
+}
+
 body {
 	/* width: 100%;
     height: 100%; */
@@ -420,7 +424,7 @@ footer {
 	/* Create an active/current tablink class */
 	.tab button.active {
 		color: #28a745;
-		background-color: #ddd);
+		background-color: #ddd;
 	}
 
 	/* Style the tab content */
@@ -481,7 +485,7 @@ footer {
 		height: 3em;
 	}
 
-	#publication .corner img {
+	#publication .corner .text-center img {
 		width: 80%;
 	}
 
